# yolo_easyocr

./: README.md  img_up_test.py  main.py  packages.txt  pyproject.toml  requirements copy.txt  requirements.txt  requirements_bk.txt  streamlit_main.py  streamlit_main_v2.py
